# qa_guru_allure_testops_pytest

./: README.md  pyproject.toml
.github/workflows/: test.yml
tests/: auth_test.py  issue_rest_test.py  issues_web_test.py
tests/steps/: rest_steps.py  web_steps.py
